--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mongodb": "^6.3.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
